--- a/aflam-mot-02.html
+++ b/aflam-mot-02.html
@@ -385,6 +385,80 @@ h1 {
        placeholder="ابحث عن فيلم..." 
        tabindex="1"><i  class="fas fa-times" id="close-icon" style="cursor: pointer;"></i></div> 
 <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2015/04/4zFXiyxBXzEXze2LTStDchydiMF-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">Backcountry</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/6591/6591.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/6591/6591-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/6591/6591-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button>            
+ <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2019/03/ldQAxQaHCqkztaok4M4HLmAYKmv-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">The Balkan Line</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/25553/25553.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/25553/25553-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/25553/25553-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+  <!--+++++++++++++++++-->          
+
+<button class="button"><img src="https://media.fushaar.com/media/2014/10/11166780_ori-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">أنا أسطورة</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/3321/3321.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/3321/3321-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/3321/3321-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+  <!--+++++++++++++++++-->          
+<!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2016/05/tcYN5N1XdLzdWY1BANkXqOshHOf-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">Kill Command</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/12333/12333.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/12333/12333-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/12333/12333-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+  <!--+++++++++++++++++-->      
+<button class="button"><img src="https://media.fushaar.com/media/2015/06/mFt7Oo3pf8f1BZAdWLyUpYM63aT-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">Maggie-ماجي</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/7577/7577.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/7577/7577-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/7577/7577-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+  <!--+++++++++++++++++-->                   
+ <button class="button"><img src="https://media.fushaar.com/media/2015/07/hFQcC5eSSHqJfk70RdgrMMxGuYt-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">RoboCop</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/7757/7757.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/7757/7757-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/7757/7757-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+
 <button class="button"><img src="https://media.fushaar.com/media/2024/07/6XJM3C47iGOK9nFU6yLFCSf4U5c-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">Trigger Warning</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
