Update movies-horror-01 .html

--- a/movies-horror-01 .html
+++ b/movies-horror-01 .html
@@ -683,7 +683,11 @@ document.getElementById('close-icon').addEventListener('click', function() {
     document.getElementById('close-icon').classList.remove('show');
 });
 
+// ImageError
 
+function handleImageError(img) {
+  img.src = 'https://i.imgur.com/MXnSqzd.png';
+}
     </script>
 
 
