--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies horror</title>
+    <title>movise-AR.DUB</title>
   <link href="https://cdn.icon-icons.com/icons2/125/PNG/96/movies_drive_20265.png" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -643,7 +643,7 @@ ZDgxYzk4YWFlZG4mc3Q9Y2ZwejZzamUmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.pla
 <button class="button">
   <img src="https://w27.my-cima.net/uploads/articles/9ce4d7c1.jpg" alt="app tv" onerror="handleImageError(this)">
   <div class="Movies-name">
-<span class="marquee">مدبلج A Quiet Place: Day One (2024) مشاهدة فيلم </span>
+<span class="tv-name-inner">مدبلج A Quiet Place: Day One (2024) مشاهدة فيلم </span>
   </div>
   <div class="serveur">سيرفرات المشاهدة</div>
   <div class="number-container">
