--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -837,7 +837,7 @@ ZHgwNnl3ZzZmaTAmc3Q9eThiNWUwZHImZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.pla
 </button>
 <!--+++++++++++++++++-->  
 <button class="button">
-  <img src="https://w27.my-cima.net/uploads/articles/9db154c1.jpg" alt="app tv" onerror="handleImageError(this)">
+  <img src="https://media0070.elcinema.com/uploads/_315x420_468903cfcf9caf027fc6f06eea1e5c5667f95277cc15772a9c2a7faa8feced4f.jpg" alt="app tv" onerror="handleImageError(this)">
   <div class="Movies-name">
 <span class="tv-name-inner">مدبلج Hit Man (2024) مشاهدة فيلم </span>
   </div>
@@ -974,7 +974,7 @@ d2omc3Q9bjd5NTkycnQmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end">
 </button>
 <!--+++++++++++++++++-->  
 <button class="button">
-  <img src="https://w27.my-cima.net/uploads/articles/5e6c3330.jpg" alt="app tv" onerror="handleImageError(this)">
+  <img src="https://media0070.elcinema.com/uploads/_315x420_2cddf1a9b2c86b4da84c545c25755ec8b937e941815d1459717801502443b8e1.jpg" alt="app tv" onerror="handleImageError(this)">
   <div class="Movies-name">
 <span class="tv-name-inner">مدبلج Boy Kills World 2023​ مشاهدة فيلم </span>
   </div>
@@ -1005,7 +1005,7 @@ Zm9xYmxzb2I3YSZzdD1sbjBiOXgxcSZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;
 
 <!--+++++++++++++++++-->  
 <button class="button">
-  <img src="https://w27.my-cima.net/uploads/articles/de4b4d29.jpg" alt="app tv" onerror="handleImageError(this)">
+  <img src="https://media0070.elcinema.com/uploads/_315x420_5e505a8fdfb12c6678104b2065bcd28a619f7fdd54504fb1042d17234cf251f1.jpg" alt="app tv" onerror="handleImageError(this)">
   <div class="Movies-name">
 <span class="tv-name-inner">مدبلج Furiosa: A Mad Max Saga 2024 مشاهدة فيلم </span>
   </div>
