--- a/beIN.MAX/beIN.MAX.html
+++ b/beIN.MAX/beIN.MAX.html
@@ -376,7 +376,7 @@ box-shadow: 0 0 5px #000;
            onkeyup="search_animal();" 
            type="text" 
            name="search" 
-           placeholder="ابحث عن الحلقه او رقم .." 
+           placeholder="ابحث عن قناة .." 
            tabindex="1">
 <button tabindex="1"id="close-icon"class="x">❌</button></div>
 <div align="center">
