--- a/aflam.w.moslsalt.html
+++ b/aflam.w.moslsalt.html
@@ -430,7 +430,7 @@ box-shadow: 0 0 5px #000;
    </button>
 
       <!-- ✅  زر الفيلم -->
-<button class="button"onclick="window.open('https://raw.githack.com/ahmadmk2023/ramadan-2025/main/ramadn%202025/jarima-nsf-layl.html')">
+<button class="button"onclick="window.open('go:seanm')">
     <img src="https://i.imgur.com/sSlegfk.png" alt="app tv"onerror="handleImageError(this)">
      <div class="Series-name">
         <div class="tv-name-inner1" >مسلسلات الانمي</div></div> 
