--- a/aflam-mot-0.html
+++ b/aflam-mot-0.html
@@ -223,7 +223,8 @@ text-decoration:none;
 
 }
    main {
-    padding: 5px;position: relative;
+    padding: 5px;
+    position: relative;
     margin-top: 60px; /* تترك مساحة للشريط العلوي */
     margin-bottom: 70px; /* تترك مساحة للقائمة السفلية */
 }
@@ -345,7 +346,7 @@ box-shadow: 0 0 5px #fff;
     left: 50%; /* توسيطه أفقيًا */
     transform: translateX(-50%); /* تصحيح التوسيط */
     width: 220px; /* عرض العنصر */
-    height: 45px; /* ارتفاع العنصر */
+    height: 40px; /* ارتفاع العنصر */
     background: #3c4a71; /* لون الخلفية */
     border-radius: 4px; /* زوايا دائرية */
     border-top: 3px solid #FFD700; /* خط سفلي */
@@ -364,8 +365,8 @@ box-shadow: 0 0 5px #fff;
     border: 2px solid #ff0066;
     box-shadow: 0 0 10px #ff0066, 0 0 20px #ff0066;
 }
-.mazid-mov {
-   padding: 5px;
+.h1 {
+   padding: 4px;
     text-align: center;
     font-size: 20px;
     font-family: "Airarabia", Sans-serif;
@@ -375,10 +376,8 @@ box-shadow: 0 0 5px #fff;
     justify-content: center;
     white-space: nowrap;
     overflow: hidden;
-     width: 100%; /* عرض العنصر */
-    height: 40px;
-        margin-bottom: 15px; /* تترك مساحة للقائمة السفلية */
-
+ margin-top: 5px; /* تترك مساحة للشريط العلوي */
+    margin-bottom: 10px; /* تترك مساحة للقائمة السفلية */
     
         }
                </style>
@@ -641,19 +640,19 @@ box-shadow: 0 0 5px #fff;
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
-     data-link="intent://in1rhjc5cqhz.premilkyway.com/hls2/01/00423/d3hg77skl1k4_,n,h,.urlset/master.m3u8?t=xbyDkwoT2eApxqy6diGXHRtN10h12R0th6clAEBknsw&s=1743888325&e=129600&f=2116291&srv=z13jtbat10fa85i&i=0.4&sp=500&p1=z13jtbat10fa85i&p2=z13jtbat10fa85i&asn=36903?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+     data-link="intent://dl.dropbox.com/scl/fi/cf66msm1ql8mncm73giwv/Tr.ansf.orm.er.3.2011.mp4?rlkey=vefee85opqp8lxvfl0d2irud5&st=io8s4sz9&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
      onclick="playStream(this)" 
      id="btn1" 
      tabindex="1">FHD</div>
 
 <div class="number" 
- data-link="intent://in1rhjc5cqhz.premilkyway.com/hls2/01/00423/d3hg77skl1k4_,n,h,.urlset/master.m3u8?t=xbyDkwoT2eApxqy6diGXHRtN10h12R0th6clAEBknsw&s=1743888325&e=129600&f=2116291&srv=z13jtbat10fa85i&i=0.4&sp=500&p1=z13jtbat10fa85i&p2=z13jtbat10fa85i&asn=36903?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+ data-link="intent://dl.dropbox.com/scl/fi/cf66msm1ql8mncm73giwv/Tr.ansf.orm.er.3.2011.mp4?rlkey=vefee85opqp8lxvfl0d2irud5&st=io8s4sz9&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
      onclick="playStream(this)" 
      id="btn2" 
      tabindex="1">HD</div>
      
 <div class="number" 
-     data-link="intent://in1rhjc5cqhz.premilkyway.com/hls2/01/00423/d3hg77skl1k4_,n,h,.urlset/master.m3u8?t=xbyDkwoT2eApxqy6diGXHRtN10h12R0th6clAEBknsw&s=1743888325&e=129600&f=2116291&srv=z13jtbat10fa85i&i=0.4&sp=500&p1=z13jtbat10fa85i&p2=z13jtbat10fa85i&asn=36903?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+     data-link="intent://dl.dropbox.com/scl/fi/cf66msm1ql8mncm73giwv/Tr.ansf.orm.er.3.2011.mp4?rlkey=vefee85opqp8lxvfl0d2irud5&st=io8s4sz9&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
      onclick="playStream(this)" 
      id="btn3" 
      tabindex="1">SD</div>
@@ -1003,7 +1002,7 @@ box-shadow: 0 0 5px #fff;
 </div>
 </div>   <h1 id="no-results" style="display: none; color: #fff; text-align: center; font-size: 20px; font-weight: bold;">لم يتم العثور على نتائج⚠️</h1>
 
-<div  class="plus"tabindex="1"onclick="window.open('https://raw.githack.com/ahmadmk2023/Movies-free1/main/aflam-mot-02.html')"><h1 >  المزيد من الأفلام      <i class="fa-solid fa-plus"></i></h1></div>
+<div  class="plus"tabindex="1"onclick="window.open('https://raw.githack.com/ahmadmk2023/Movies-free1/main/aflam-mot-02.html')"><h1 class="h1">  المزيد من الأفلام      <i class="fa-solid fa-plus"></i></h1></div>
   
  </main> 
  
