--- a/aflam-mot-0.html
+++ b/aflam-mot-0.html
@@ -454,7 +454,7 @@ box-shadow: 0 0 5px #fff;
      id="btn3" 
      tabindex="1">SD</div>
  </div ></button> 
-        <!-- ✅  زر الفيلم -->
+
         <!-- ✅  زر الفيلم -->
        <button class="button">
     <img src="https://fr.web.img3.acsta.net/c_310_420/img/3e/61/3e619c6423fd2c82be9ec8b727aa217b.jpg" alt="app tv"onerror="handleImageError(this)">
@@ -557,6 +557,34 @@ box-shadow: 0 0 5px #fff;
      id="btn3" 
      tabindex="1">SD</div>
  </div ></button> 
+ 
+         <!-- ✅  زر الفيلم -->
+         <button class="button">
+    <img src="https://fr.web.img3.acsta.net/c_310_420/img/57/b3/57b356018fe053ff81efa47e79cfb780.jpg" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+        <div class="tv-name-inner" >Venom: The Last Dance-(2024)-فينوم: الرقصة الأخيرة</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://stream.fushaar.link/movie/48648/48648.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
+
+<div class="number" 
+     data-link="intent://stream.fushaar.link/movie/48648/48648-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data link="intent://stream.fushaar.link/movie/48648/48648-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn3" 
+     tabindex="1">SD</div>
+ </div ></button> 
+ 
+ 
   <!-- ✅  زر الفيلم -->
   <button class="button">
     <img src="https://fr.web.img6.acsta.net/c_310_420/pictures/23/04/27/15/59/2127095.jpg" alt="app tv"onerror="handleImageError(this)">
