--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -428,7 +428,32 @@ box-shadow: 0 0 5px #fff;
               <div class="section" data-section="movise-AR.DUB-01">
  
         <!--+++++++++++++++++--> 
+   <!-- ✅  زر الفيلم -->
+       <button class="button">
+    <img src="https://fr.web.img6.acsta.net/c_310_420/img/16/9b/169bbcbdb93babc2905e4fab5c8d66d5.jpg" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+        <div class="tv-name-inner" >A Working Man-(2025)-رجل عامل</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/j3g0o35n2ga5yzyxp5lfi/A.Working.Man.AR.DUB.mp4?rlkey=9pbw472apafei05dbd3461rd8&st=9hrkamm4&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
 
+<div class="number" 
+     data-link="intent://dl.dl.dropbox.com/scl/fi/j3g0o35n2ga5yzyxp5lfi/A.Working.Man.AR.DUB.mp4?rlkey=9pbw472apafei05dbd3461rd8&st=9hrkamm4&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data link="intent://dl.dl.dropbox.com/scl/fi/j3g0o35n2ga5yzyxp5lfi/A.Working.Man.AR.DUB.mp4?rlkey=9pbw472apafei05dbd3461rd8&st=9hrkamm4&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn3" 
+     tabindex="1">SD</div>
+ </div ></button> 
+         <!-- ✅  زر الفيلم -->
          <!-- ✅  زر الفيلم -->
        <button class="button">
     <img src="https://m.media-amazon.com/images/I/81uuRKKmhtL._AC_UY218_.jpg" alt="app tv"onerror="handleImageError(this)">
