--- a/افلام عربي.html
+++ b/افلام عربي.html
@@ -394,17 +394,17 @@ box-shadow: 0 0 5px #000;
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
-   data-link="intent://dl.dropbox.com/scl/fi/664mmbgqpyalqkqfcv7fk/Aldashash.mp4?rlkey=l8084zrbidtm748jg6dswaxlx&st=k12mpo6p&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
+   data-link="intent://dl.dropbox.com/scl/fi/liee825c6bb3fx7o2bvl8/Al.Leib.Maa.Al.Eyal.mp4?rlkey=gn23v3khym8f2g44qjvktsrkh&st=ks3yf93h&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
      id="btn1" 
      tabindex="1">1</div>
 
 <div class="number" 
-     data-link="intent://dl.dropbox.com/scl/fi/664mmbgqpyalqkqfcv7fk/Aldashash.mp4?rlkey=l8084zrbidtm748jg6dswaxlx&st=k12mpo6p&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
+     data-link="intent://dl.dropbox.com/scl/fi/liee825c6bb3fx7o2bvl8/Al.Leib.Maa.Al.Eyal.mp4?rlkey=gn23v3khym8f2g44qjvktsrkh&st=ks3yf93h&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
      id="btn2" 
      tabindex="1">2</div>
      
 <div class="number" 
-         data-link="intent://dl.dropbox.com/scl/fi/664mmbgqpyalqkqfcv7fk/Aldashash.mp4?rlkey=l8084zrbidtm748jg6dswaxlx&st=k12mpo6p&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
+         data-link="intent://dl.dropbox.com/scl/fi/liee825c6bb3fx7o2bvl8/Al.Leib.Maa.Al.Eyal.mp4?rlkey=gn23v3khym8f2g44qjvktsrkh&st=ks3yf93h&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
      id="btn3" 
      tabindex="1">3</div>
  </div ></button> 
@@ -440,17 +440,17 @@ box-shadow: 0 0 5px #000;
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
-   data-link="intent://dl.dropbox.com/scl/fi/liee825c6bb3fx7o2bvl8/Al.Leib.Maa.Al.Eyal.mp4?rlkey=gn23v3khym8f2g44qjvktsrkh&st=ks3yf93h&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
+   data-link="intent://dl.dropbox.com/scl/fi/664mmbgqpyalqkqfcv7fk/Aldashash.mp4?rlkey=l8084zrbidtm748jg6dswaxlx&st=k12mpo6p&dl=1##Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
      id="btn1" 
      tabindex="1">1</div>
 
 <div class="number" 
-     data-link="intent://dl.dropbox.com/scl/fi/liee825c6bb3fx7o2bvl8/Al.Leib.Maa.Al.Eyal.mp4?rlkey=gn23v3khym8f2g44qjvktsrkh&st=ks3yf93h&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
+     data-link="intent://dl.dropbox.com/scl/fi/664mmbgqpyalqkqfcv7fk/Aldashash.mp4?rlkey=l8084zrbidtm748jg6dswaxlx&st=k12mpo6p&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
      id="btn2" 
      tabindex="1">2</div>
      
 <div class="number" 
-         data-link="intent://dl.dropbox.com/scl/fi/liee825c6bb3fx7o2bvl8/Al.Leib.Maa.Al.Eyal.mp4?rlkey=gn23v3khym8f2g44qjvktsrkh&st=ks3yf93h&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
+         data-link="intent://dl.dropbox.com/scl/fi/664mmbgqpyalqkqfcv7fk/Aldashash.mp4?rlkey=l8084zrbidtm748jg6dswaxlx&st=k12mpo6p&dl=1#Intent;scheme=https;package=co.wuffy.player;end" onclick="playStream(this)" 
      id="btn3" 
      tabindex="1">3</div>
  </div ></button> 
