--- a/افلام عربي.html
+++ b/افلام عربي.html
@@ -114,7 +114,7 @@
             padding:2px; /* تعيين الهامش الداخلي للزر */
             border-radius: 8px; /* تدوير الزوايا لتصميم أفضل */
             width: 155px;
-            height:230px;
+            height:240px;
                 margin: 6px;
     border: 2px solid #ccc;
                  background: #3c4a71; 
@@ -189,12 +189,14 @@
         
             width: 30px;
             height: 30px;
-             background:#339a8a;
+            background:#339a8a;
             border-radius: 8px;
-             border: 2px solid #fff;
+            border: 2px solid #fff;
             color: #FFF;
-         font-family: "Airarabia", Sans-serif;
-    font-weight: bold;
+           font-family: "Airarabia", Sans-serif;
+           font-weight: bold;    
+            margin-top: 4px;
+
             display: flex;
             align-items: center;
             justify-content: center;
