--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -351,23 +351,23 @@ box-shadow: 0 0 5px #fff;
     transform: translateX(-50%); /* تصحيح التوسيط */
     width: 220px; /* عرض العنصر */
     height: 40px; /* ارتفاع العنصر */
-    background: #ccc; /* لون الخلفية */
+    background: #3c4a71; /* لون الخلفية */
     border-radius: 8px; /* زوايا دائرية */
     border: 3px solid #ff0066; /* خط سفلي */
     box-shadow: 0 0 10px #ff0066, 0 0 20px #ff0066;
     display: flex; /* استخدام flexbox لتوسيط المحتوى */
     justify-content: center; /* توسيط النص أفقيًا */
     align-items: center; /* توسيط النص عموديًا */
-    color: #000; /* لون النص */
+    color: #fff; /* لون النص */
     padding: 5px;
     z-index: 1; /* التأكد من أنه يظهر فوق المحتويات الأخرى */
 }
 
 
 .plus:hover,.plus:focus{
-    background: #3c4a71;
-    color: #fff;
-    border: 5px solid #ff0066;
+    background: #222;
+    color: #ff0066;
+    border: 3px solid #ff0066;
     box-shadow: 0 0 10px #ffff, 0 0 20px #ffff;
 }
 .h1 {
