--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -432,8 +432,31 @@ box-shadow: 0 0 5px #fff;
 
 
 
-                <!-- ✅  زر الفيلم -->
+          <!-- ✅  زر الفيلم -->
+  <button class="button">
+    <img src="https://m.media-amazon.com/images/I/91qMd51aqvL._AC_UY218_.jpg" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+        <div class="tv-name-inner" >Silent Zone-(2025)-المنطقة الصامتة</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/memvrorfvcfototfb9pf0/Silent.Zone.2025.AR.mp4?rlkey=19hfzp7jss2v0fwui6zquuxb0&st=gx12mz0v&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
 
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/memvrorfvcfototfb9pf0/Silent.Zone.2025.AR.mp4?rlkey=19hfzp7jss2v0fwui6zquuxb0&st=gx12mz0v&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data link="intent://dl.dropbox.com/scl/fi/memvrorfvcfototfb9pf0/Silent.Zone.2025.AR.mp4?rlkey=19hfzp7jss2v0fwui6zquuxb0&st=gx12mz0v&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn3" 
+     tabindex="1">SD</div>
+ </div ></button> 
          <!-- ✅  زر الفيلم -->
                 <button class="button">
     <img src="https://m.media-amazon.com/images/I/91iPCQk0swL._AC_SY445_.jpg" alt="app tv"onerror="handleImageError(this)">
