--- a/aflam-mot-0.html
+++ b/aflam-mot-0.html
@@ -439,6 +439,35 @@ box-shadow: 0 0 5px #fff;
                              <!-- ✅  زر الفيلم -->
                              <!-- ✅  زر الفيلم -->
                              <!-- ✅  زر الفيلم -->
+                             <button class="button">
+  <img src="https://fr.web.img6.acsta.net/c_310_420/img/17/95/179538ceb16a9fa433b48940f9350fc9.jpg" alt="app tv" onerror="handleImageError(this)">
+  
+  <div class="mov-name">
+    <div class="tv-name-inner">Wish You Were Here-(2025)-أتمنى لو كنت هنا</div>
+  </div> 
+  
+  <div class="link">سيرفرات المشاهدة</div> 
+  
+  <div class="number-container">
+    <div class="number" 
+         data-link="intent://stream.fushaar.link/movie/48908/48908.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+         onclick="playStream(this)" 
+         id="btn1" 
+         tabindex="1">FHD</div>
+
+    <div class="number" 
+         data-link="intent://stream.fushaar.link/movie/48908/48908-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+         onclick="playStream(this)" 
+         id="btn2" 
+         tabindex="1">HD</div>
+
+    <div class="number" 
+         data-link="intent://stream.fushaar.link/movie/48908/48908-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+         onclick="playStream(this)" 
+         id="btn3" 
+         tabindex="1">SD</div>
+  </div>
+</button>
                              <!-- ✅  زر الفيلم -->
 <button class="button">
 <img src="https://resizing.flixster.com/D6aLbOtCJdj4ItAJL_UgDI_lzzA=/206x305/v2/https://resizing.flixster.com/mnV6FHsn27VI6-Eb9oBXgjQ-UI4=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzZkODgxZmZjLWU4ODUtNGQ2ZS1iZDIxLWI0N2MwNzBiZWVhOC5qcGc=" alt="app tv"onerror="handleImageError(this)">
@@ -1905,6 +1934,38 @@ document.addEventListener("DOMContentLoaded", function () {
         img.onerror = null; // إيقاف محاولة تحميل الصورة مرة أخرى
     }
 </script>
+
+
+<script>
+  function playClickSound() {
+    const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+    const oscillator = audioCtx.createOscillator();
+    const gainNode = audioCtx.createGain();
+
+    oscillator.type = 'sine'; // نغمة ناعمة مثل Android
+    oscillator.frequency.setValueAtTime(650, audioCtx.currentTime); // تردد متوسط مرتفع
+    gainNode.gain.setValueAtTime(0.05, audioCtx.currentTime); // صوت خفيف
+
+    oscillator.connect(gainNode);
+    gainNode.connect(audioCtx.destination);
+
+    oscillator.start();
+    oscillator.stop(audioCtx.currentTime + 0.07); // صوت سريع وناعم
+  }
+
+  const numberButtons = document.querySelectorAll('.number');
+
+  numberButtons.forEach(el => {
+    el.addEventListener('mouseenter', playClickSound);  // عند تمرير الماوس
+    el.addEventListener('click', playClickSound);       // عند النقر
+    el.addEventListener('focus', playClickSound);       // عند التنقل بالأسهم (Android TV)
+    el.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') playClickSound();          // عند ضغط Enter من الريموت
+    });
+  });
+</script>
+
+
 
 
 </body>
