--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -437,6 +437,30 @@ box-shadow: 0 0 5px #fff;
                <!-- ✅  زر الفيلم -->
                <!-- ✅  زر الفيلم -->
                <!-- ✅  زر الفيلم -->
+               <button class="button">
+    <img src="https://fr.web.img6.acsta.net/c_310_420/img/51/56/5156291657e70ac07ccaf128d37daf08.jpg" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+        <div class="tv-name-inner" >Until Dawn-(2024)-راكب الأمواج</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/nu605mcl7cit7t26jg2lu/The.Surfer.2024..AR.DUB.mp4?rlkey=7so1qn3015v3nw9tgbz3z7rmr&st=l3o9qrhe&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
+
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/nu605mcl7cit7t26jg2lu/The.Surfer.2024..AR.DUB.mp4?rlkey=7so1qn3015v3nw9tgbz3z7rmr&st=l3o9qrhe&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/nu605mcl7cit7t26jg2lu/The.Surfer.2024..AR.DUB.mp4?rlkey=7so1qn3015v3nw9tgbz3z7rmr&st=l3o9qrhe&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">SD</div>
+ </div ></button>
                <!-- ✅  زر الفيلم -->
                <button class="button">
     <img src="https://resizing.flixster.com/OJqeRkYRVnVvnm-r2cHTKzPsCr0=/206x305/v2/https://resizing.flixster.com/4piFgrjX_dbjitE78ILbti9RWZs=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzY3ZWI3ZWI0LTJkNTYtNGViZC05NjIxLTY4Y2NkYTViOGE1Mi5qcGc=" alt="app tv"onerror="handleImageError(this)">
