--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -437,7 +437,7 @@ box-shadow: 0 0 5px #fff;
                <!-- ✅  زر الفيلم -->
                <!-- ✅  زر الفيلم -->             
                <!-- ✅  زر الفيلم -->
-                                             <button class="button">
+<button class="button">
     <img src="https://resizing.flixster.com/CviRrn1xZu330ox-GTE1Z43VPT0=/fit-in/705x460/v2/https://resizing.flixster.com/lhK0oLW4tDuLVhIrRB41BMaIkJU=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzk2NzBlMWIyLWJhNzItNDM2OS04ZmM2LWVlNzcxNjFhZGYwNy5qcGc=" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
 <div class="tv-name-inner" >Mission Impossible  The.Final Reckoning-(2025)-المهمة المستحيلة: الحساب النهائي</div></div> 
@@ -462,7 +462,31 @@ box-shadow: 0 0 5px #fff;
      tabindex="1">SD</div>
  </div ></button> 
                <!-- ✅  زر الفيلم -->
-                              <button class="button">
+<button class="button">
+    <img src="https://image.tmdb.org/t/p/w780/okWSsqAPsrIAwKa9CivsBiU84ZI.jpg" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+<div class="tv-name-inner" >Mexico 86-(2025)-المكسيك 86 </div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/xsvcvoi1vinoi8u26zwbf/Mexico.86.24.AR.DUB.mp4?rlkey=ubzqn1jmrppaehg56r0295bhm&st=v2rko5xb&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
+
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/xsvcvoi1vinoi8u26zwbf/Mexico.86.24.AR.DUB.mp4?rlkey=ubzqn1jmrppaehg56r0295bhm&st=v2rko5xb&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/xsvcvoi1vinoi8u26zwbf/Mexico.86.24.AR.DUB.mp4?rlkey=ubzqn1jmrppaehg56r0295bhm&st=v2rko5xb&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">SD</div>
+ </div ></button>                  <!-- ✅  زر الفيلم -->
+          <button class="button">
     <img src="https://es.web.img3.acsta.net/c_310_420/img/fd/8b/fd8b4cdb41cacf08917aaf60e6944caa.jpg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
 <div class="tv-name-inner" >Exterritorial-(2025)-خارج عن التشريع الوطنى</div></div> 
